[package]
name = "display"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10.1", features = ["dynamic_linking"]}
mint = {version = "0.5", features = ["serde"]}
glam = {version = "0.23", features = ["serde"]}
serde = {version = "1", features = ["derive"]}
meadow = { git = "https://github.com/quietlychris/meadow.git", branch = "main"}

