[package]
name = "remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mint = {version = "0.5", features = ["serde"]}
glam = {version = "0.21", features = ["serde"]}
bno055 = "0.3.3"
linux-embedded-hal = "0.3"
serde = {version = "1", features = ["derive"]}
meadow = { git = "https://github.com/quietlychris/meadow.git", branch = "main"}